--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "gh-pages": "^3.1.0",
+    "highlight.js": "^10.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-highlight.js": "^1.0.7",
